[package]
name = "gpt-image-local"
version = "0.1.0"
description = "Local desktop image generator for OpenAI-compatible image APIs"
authors = ["GPT Image Local"]
edition = "2021"

[lib]
name = "gpt_image_local_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["fs"] }
uuid = { version = "1", features = ["v4", "serde"] }
